Mon Oct 26 15:27:28 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* Makefile.config.in, configure.in, configure: Fixed problem with
	-ldb, -lrx, etc. not being declared in $LIBS

	* htdoc/install.html: Added remarks about using ./configure
	--prefix=

	* README: Cleaned up for new URLs, version numbers, etc.

Wed Oct 21 13:30:05 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/timegm.c: Corrected Oct 17 change. Should now work. :-)

	* htcommon/defaults.cc: Added defaults for new directives
	server_aliases and limit_normalized.

	* htdig/HTML.cc: Cleaned up HTML parsing based on patch by Reni 
	Seindal.
	
Wed Oct 21 18:31:00 1998  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htlib/URL.cc,	htlib/URL.h: Added patch to support translation of
	server names. (Configuration directive: server_aliases)
	* htdig/Retriever.cc, htdig/htdig.h, htdig/main.cc:
	Additional limiting after normalization of the URL.
	(Configuration directive: limit_normalized)

Sun Oct 18 17:19:51 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/Connection.h, htlib/Connection.cc: Define new function
	timeout() as adapted from a patch by Reni Seindal.

	* htdig/Document.cc: Use it as adapted from a patch by Reni Seindal.

Sun Oct 18 16:33:58 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentDB.cc: Changed deserialize function to
	explicitly delete DocumentRef.

	* htcommon/DocumentRef.cc: Added trap for DOC_STRING value.

	* htdig/Retriever.cc: Delete and reallocate Document variable
	before retrieving. (Fixes database corruption bug) Removed code to
	add a "/" to every URL with a 404--servers should send a redirect
	in this case.

Sat Oct 17 20:15:44 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/timegm.c: Declare __gmtime_r if not defined

Sat Oct 17 10:15:57 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Fixed problem with configuring DB_DIR introduced
	by Oct 11 change.
